# isagog-docs

./: .gitignore  Dockerfile  README.md  dev.py  docker-compose.yaml  main.py  new-main.py  pyproject.toml  start.py
isagog-docs/: app.py
isagog_docs/: config.py  main.py
isagog_docs/api/: __init__.py
isagog_docs/api/endpoints/: analysis.py  documents.py
isagog_docs/core/: config.py  database.py  logging.py
isagog_docs/schemas/: analysis.py  document.py
isagog_docs/services/: analysis.py  documents.py
src/: config.py  extractor.py  models.py  processor.py  worker.py
tests/: test_analysis.py  test_documents.py
tests/api/: conftest.py  test_analysis.py  test_documents.py
