[project]
name = "isagog-docs"
version = "0.1.0"
description = ""
authors = [
    {name = "David Valente",email = "d.valente@davidvalente.xyz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "haystack-ai (>=2.14.2,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pymongo (>=4.13.1,<5.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "openrouter-haystack (>=0.1.0,<0.2.0)",
    "pypdf (>=5.6.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
