[project]
name = "isagog-docs"
version = "0.1.4"
description = ""
authors = [
    {name = "David Valente",email = "d.valente@isagog.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "isagog-docs"
version = "0.1.4"
description = "Isagog Documents Management API"

[tool.poetry.dependencies]
pytest = "^8.4.0"
trio = "^0.22.0"
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic = "^2.10"
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
haystack-ai = "^2.14.2"
watchdog = "^6.0.0"
pymongo = "^4.13.1"
python-docx = "^1.1.2"
openrouter-haystack = "^0.1.0"
pypdf = "^5.6.0"
pydantic-settings = "^2.9.1"
isagog-platform = {git = "https://github.com/Isagog/isagog-platform.git"}
# Uncomment in development
# isagog-platform = {path = "../isagog-platform", develop = true}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
